2011-01-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Oliver Hunt.

        Could review tool include style failure info?
        https://bugs.webkit.org/show_bug.cgi?id=49049

        This does not handle patches that have old paths (e.g. without the Source prefix).
        Although that would be fairly straightforward to workaround.

        * code-review.js:

2011-01-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        handle cases where PrettyPatch.rb doesn't linkify filenames
        https://bugs.webkit.org/show_bug.cgi?id=52834

        * code-review.js:

2011-01-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix goofup in http://trac.webkit.org/changeset/76082
        https://bugs.webkit.org/show_bug.cgi?id=52830

        We were showing the revision number of the patch at the bottom
        of the diff and expanding from the bottom of the diff would fail.

        Also, removed an unused variable and scoped queries appropriatly
        to the file_diff they should have been operating on.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-19  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [reviewtool] Add a link for annotated trac page on review page
        https://bugs.webkit.org/show_bug.cgi?id=52747

        -add line numbers to all trac links to the first line in the file diff
        -add annotate/review log links
        -make file-diff links other than the file name only show when you mouseover the filediff
        -fix white-space to only wrap the .text element and it's childen, any of it's siblings/parents

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        make line selection have a extend only from where you start the selection in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=52485

        * code-review.js:
