@@ -417,7 +417,7 @@ body {
 }
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-<script src="code-review.js?version=28"></script>
+<script src="code-review.js?version=29"></script>
 EOF
 
     def self.revisionOrDescription(string)
